# GFX-Renderer

./: .gitignore  Build.bat  CMakeLists.txt  GFX_main.cpp  README.md  build.sh  compile_shader.bat  compile_shader.sh  setup.bat  setup.sh  xmake.lua
Assets/Shaders/: simple_shader.frag  simple_shader.vert
include/: Application.hpp  Global.hpp  GraphicsHandler.hpp  InputHandler.hpp  Logging.hpp  Pipeline.hpp  Settings.hpp  WindowHandler.hpp
include/Graphics/: GameObject.hpp  GameObject.ipp  RenderPipeline.hpp  Renderer.hpp  Renderer.ipp  VkModel.hpp  VkModel.ipp  WindowHandler.hpp  WindowHandler.ipp
include/Graphics/Pipeline/: RainbowSystem.hpp  SimpleRenderPipeline.hpp  SimpleRenderPipeline.ipp
include/Graphics/Vulkan/: VkEngine.hpp  VkInstanceImpl.hpp  VkInstanceImpl.ipp  VkPipelineImpl.hpp  VkPipelineImpl.ipp  VkSwapChainImpl.hpp  VkSwapChainImpl.ipp  VkUtil.hpp  VkUtil.ipp  VulkanInitializer.hpp
include/Input/: InputHandler.hpp  InputHandler.ipp
src/: App.cpp  Application.cpp  Data_Type.hpp  GFX_main.cpp  Glfw_Initialization.cpp  Glfw_Initialization.hpp  Glfw_Monitor.cpp  Glfw_Monitor.hpp  Glfw_Window.cpp  Glfw_Window.hpp  GraphicsHandler.cpp  InputHandler.cpp  Pipeline.cpp  Precomp.hpp  VK_Renderer.cpp  VK_Renderer.hpp  WindowHandler.cpp  main.cpp  win_main.cpp
src/Common/: Config.hpp  Precomp.hpp
src/Graphics/: RenderPipeline.cpp  Renderer.cpp  VkModel.cpp  WindowHandler.cpp
src/Graphics/Pipeline/: SimpleRenderPipeline.cpp
src/Graphics/Vulkan/: VkEngine.cpp  VkInstanceImpl.cpp  VkPipelineImpl.cpp  VkSwapChainImpl.cpp  VkUtil.cpp  VulkanInitializer.cpp
src/Input/: InputHandler.cpp
src/Renderer/: CMakeLists.txt  Utilities.cpp  Utilities.hpp  VK_Renderer.cpp  VK_Renderer.hpp  VK_Renderer.ipp  VK_Utilities.cpp  VK_Utilities.hpp
